@@ -25,7 +25,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class ApplicationMapper {
@@ -37,7 +36,7 @@ public class ApplicationMapper {
     }
 
     public List<EnrollmentDto> enrollmentToDto(List<Enrollment> enrollments) {
-        return enrollments.stream().map(this::enrollmentToDto).collect(Collectors.toList());
+        return enrollments.stream().map(this::enrollmentToDto).toList();
     }
 
     public EnrollmentDto enrollmentToDto(Enrollment enrollment) {
@@ -47,7 +46,7 @@ public class ApplicationMapper {
     }
 
     public List<UserDto> userToDto(List<User> users) {
-        return users.stream().map(this::userToDto).collect(Collectors.toList());
+        return users.stream().map(this::userToDto).toList();
     }
 
     public UserDto userToDto(User user) {
@@ -55,7 +54,7 @@ public class ApplicationMapper {
     }
 
     public List<InvoiceDto> invoiceToDto(List<Invoice> invoices) {
-        return invoices.stream().map(this::invoiceToDto).collect(Collectors.toList());
+        return invoices.stream().map(this::invoiceToDto).toList();
     }
 
     public InvoiceDto invoiceToDto(Invoice invoice) {
@@ -65,7 +64,7 @@ public class ApplicationMapper {
     }
 
     public List<Enrollment> enrollmentToEntity(List<EnrollmentDto> enrollmentDtos) {
-        return enrollmentDtos.stream().map(this::enrollmentToEntity).collect(Collectors.toList());
+        return enrollmentDtos.stream().map(this::enrollmentToEntity).toList();
     }
 
     public void enrollmentToEntity(Enrollment enrollment, EnrollmentDto enrollmentDto) {
@@ -77,7 +76,7 @@ public class ApplicationMapper {
     }
 
     public List<User> userToEntity(List<UserDto> userDtos) {
-        return userDtos.stream().map(this::userToEntity).collect(Collectors.toList());
+        return userDtos.stream().map(this::userToEntity).toList();
     }
 
     public User userToEntity(UserDto user) {
@@ -85,7 +84,7 @@ public class ApplicationMapper {
     }
 
     public List<Invoice> invoiceToEntity(List<InvoiceDto> invoices) {
-        return invoices.stream().map(this::invoiceToEntity).collect(Collectors.toList());
+        return invoices.stream().map(this::invoiceToEntity).toList();
     }
 
     public Invoice invoiceToEntity(InvoiceDto invoice) {
@@ -150,7 +149,7 @@ public class ApplicationMapper {
         List<ActivityDto> activityDtos = session.getActivities()
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
         sessionDto.setActivities(activityDtos);
         return sessionDto;
     }
@@ -200,7 +199,10 @@ public class ApplicationMapper {
     }
 
     public LessonDto toDto(Lesson lesson) {
-        return mapper.map(lesson, LessonDto.class);
+        LessonDto dto = mapper.map(lesson, LessonDto.class);
+        dto.setClazzId(lesson.getClazz().getId());
+        dto.setSessionId(lesson.getSession().getId());
+        return dto;
     }
 
     public Lesson toEntity(LessonDto lessonDto) {
